[package]
name = "polars-reverse-geocode"
version = "0.7.6"
edition = "2021"

[lib]
name = "polars_reverse_geocode"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.18.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.44.2", default-features = false }
polars-arrow = { version = "0.44.2", default-features = false }
reverse_geocoder = "4.1.1"
